--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
   </head>
 
   <body>
-    <h1 id="title" >Palera de Cores</h1>
+    <h1 id="title" >Paleta de Cores</h1>
+
+    <section id="color-palette" >
+      <div class="color" >
+        Black
+      </div>
+
+      <div class="color" >
+        Red
+      </div>
+
+      <div class="color" >
+        Green
+      </div>
+
+      <div class="color" >
+        Blue
+      </div>
+    </section>
 
     <link rel="stylesheet" href="./script.js">
   </body>
