--- a/index.html
+++ b/index.html
@@ -14,20 +14,54 @@
     <h1 id="title" >Paleta de Cores</h1>
 
     <section id="color-palette" >
-      <div class="color" >
-        Black
+      <div class="color" > Black </div>
+
+      <div class="color" > Red </div>
+
+      <div class="color" > Green </div>
+
+      <div class="color" > Blue </div>
+    </section>
+
+    <section id="pixel-board" >
+      <div id="linha-1" >
+        <div class="pixel" > 1 </div>
+        <div class="pixel" > 2 </div>
+        <div class="pixel" > 3 </div>
+        <div class="pixel" > 4 </div>
+        <div class="pixel" > 5 </div>
       </div>
 
-      <div class="color" >
-        Red
+      <div id="linha-2" >
+        <div class="pixel" > 1 </div>
+        <div class="pixel" > 2 </div>
+        <div class="pixel" > 3 </div>
+        <div class="pixel" > 4 </div>
+        <div class="pixel" > 5 </div>
       </div>
 
-      <div class="color" >
-        Green
+      <div id="linha-3" >
+        <div class="pixel" > 1 </div>
+        <div class="pixel" > 2 </div>
+        <div class="pixel" > 3 </div>
+        <div class="pixel" > 4 </div>
+        <div class="pixel" > 5 </div>
       </div>
 
-      <div class="color" >
-        Blue
+      <div id="linha-4" >
+        <div class="pixel" > 1 </div>
+        <div class="pixel" > 2 </div>
+        <div class="pixel" > 3 </div>
+        <div class="pixel" > 4 </div>
+        <div class="pixel" > 5 </div>
+      </div>
+
+      <div id="linha-5" >
+        <div class="pixel" > 1 </div>
+        <div class="pixel" > 2 </div>
+        <div class="pixel" > 3 </div>
+        <div class="pixel" > 4 </div>
+        <div class="pixel" > 5 </div>
       </div>
     </section>
 
