--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-    <link rel="stylesheet" href="./script.js">
+    <script src="./script.js" ></script>
   </body>
 
 </html>
