--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <h1 id="title" >Paleta de Cores</h1>
 
     <section id="color-palette" >
-      <div class="color selected" > Black </div>
+      <div class="color" > black </div>
 
-      <div class="color" > Red </div>
+      <div class="color" > red </div>
 
-      <div class="color" > Green </div>
+      <div class="color" > green </div>
 
-      <div class="color" > Blue </div>
+      <div class="color" > blue </div>
     </section>
 
     <section id="pixel-board" >
