--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <div class="color" > blue </div>
     </section>
 
+    <button id="clear-board" >Limpar</button>
+
     <section id="pixel-board" >
       <div id="linha-1" >
         <div class="pixel" > 1 </div>
