--- a/index.html
+++ b/index.html
@@ -11,61 +11,69 @@
   </head>
 
   <body>
-    <h1 id="title" >Paleta de Cores</h1>
+    <header>
+      <h1 id="title" >Paleta de Cores</h1>
+    </header>
 
-    <section id="color-palette" >
-      <div class="color" > black </div>
+    <main>
+      <section id="color-palette" >
+        <div class="color" > black </div>
+  
+        <div class="color" > red </div>
+  
+        <div class="color" > green </div>
+  
+        <div class="color" > blue </div>
+      </section>
+  
+      <input type="number" min="0" id="board-size" >
 
-      <div class="color" > red </div>
+      <button id="generate-board" >VQV</button>
 
-      <div class="color" > green </div>
-
-      <div class="color" > blue </div>
-    </section>
-
-    <button id="clear-board" >Limpar</button>
-
-    <section id="pixel-board" >
-      <div id="linha-1" >
-        <div class="pixel" > 1 </div>
-        <div class="pixel" > 2 </div>
-        <div class="pixel" > 3 </div>
-        <div class="pixel" > 4 </div>
-        <div class="pixel" > 5 </div>
-      </div>
-
-      <div id="linha-2" >
-        <div class="pixel" > 1 </div>
-        <div class="pixel" > 2 </div>
-        <div class="pixel" > 3 </div>
-        <div class="pixel" > 4 </div>
-        <div class="pixel" > 5 </div>
-      </div>
-
-      <div id="linha-3" >
-        <div class="pixel" > 1 </div>
-        <div class="pixel" > 2 </div>
-        <div class="pixel" > 3 </div>
-        <div class="pixel" > 4 </div>
-        <div class="pixel" > 5 </div>
-      </div>
-
-      <div id="linha-4" >
-        <div class="pixel" > 1 </div>
-        <div class="pixel" > 2 </div>
-        <div class="pixel" > 3 </div>
-        <div class="pixel" > 4 </div>
-        <div class="pixel" > 5 </div>
-      </div>
-
-      <div id="linha-5" >
-        <div class="pixel" > 1 </div>
-        <div class="pixel" > 2 </div>
-        <div class="pixel" > 3 </div>
-        <div class="pixel" > 4 </div>
-        <div class="pixel" > 5 </div>
-      </div>
-    </section>
+      <button id="clear-board" >Limpar</button>
+  
+      <section id="pixel-board" >
+        <div id="linha-1" >
+          <div class="pixel" > 1 </div><!--
+       --><div class="pixel" > 2 </div><!--
+       --><div class="pixel" > 3 </div><!--
+       --><div class="pixel" > 4 </div><!--
+       --><div class="pixel" > 5 </div>
+        </div>
+  
+        <div id="linha-2" >
+          <div class="pixel" > 1 </div><!--
+       --><div class="pixel" > 2 </div><!--
+       --><div class="pixel" > 3 </div><!--
+       --><div class="pixel" > 4 </div><!--
+       --><div class="pixel" > 5 </div>
+        </div>
+  
+        <div id="linha-3" >
+          <div class="pixel" > 1 </div><!--
+       --><div class="pixel" > 2 </div><!--
+       --><div class="pixel" > 3 </div><!--
+       --><div class="pixel" > 4 </div><!--
+       --><div class="pixel" > 5 </div>
+        </div>
+  
+        <div id="linha-4" >
+          <div class="pixel" > 1 </div><!--
+       --><div class="pixel" > 2 </div><!--
+       --><div class="pixel" > 3 </div><!--
+       --><div class="pixel" > 4 </div><!--
+       --><div class="pixel" > 5 </div>
+        </div>
+  
+        <div id="linha-5" >
+          <div class="pixel" > 1 </div><!--
+       --><div class="pixel" > 2 </div><!--
+       --><div class="pixel" > 3 </div><!--
+       --><div class="pixel" > 4 </div><!--
+       --><div class="pixel" > 5 </div>
+        </div>
+      </section>
+    </main>
 
     <script src="./script.js" ></script>
   </body>
