--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <main>
       <section id="color-palette" >
-        <div class="color" > black </div>
+        <div class="color" ></div>
   
-        <div class="color" > red </div>
+        <div class="color" ></div>
   
-        <div class="color" > green </div>
+        <div class="color" ></div>
   
-        <div class="color" > blue </div>
+        <div class="color" ></div>
       </section>
   
       <input type="number" min="0" id="board-size" >
@@ -33,44 +33,44 @@
       <button id="clear-board" >Limpar</button>
   
       <section id="pixel-board" >
-        <div id="linha-1" >
-          <div class="pixel" > 1 </div><!--
-       --><div class="pixel" > 2 </div><!--
-       --><div class="pixel" > 3 </div><!--
-       --><div class="pixel" > 4 </div><!--
-       --><div class="pixel" > 5 </div>
+        <div class="linha" >
+          <div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div>
         </div>
   
-        <div id="linha-2" >
-          <div class="pixel" > 1 </div><!--
-       --><div class="pixel" > 2 </div><!--
-       --><div class="pixel" > 3 </div><!--
-       --><div class="pixel" > 4 </div><!--
-       --><div class="pixel" > 5 </div>
+        <div class="linha" >
+          <div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div>
         </div>
   
-        <div id="linha-3" >
-          <div class="pixel" > 1 </div><!--
-       --><div class="pixel" > 2 </div><!--
-       --><div class="pixel" > 3 </div><!--
-       --><div class="pixel" > 4 </div><!--
-       --><div class="pixel" > 5 </div>
+        <div class="linha" >
+          <div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div>
         </div>
   
-        <div id="linha-4" >
-          <div class="pixel" > 1 </div><!--
-       --><div class="pixel" > 2 </div><!--
-       --><div class="pixel" > 3 </div><!--
-       --><div class="pixel" > 4 </div><!--
-       --><div class="pixel" > 5 </div>
+        <div class="linha" >
+          <div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div>
         </div>
   
-        <div id="linha-5" >
-          <div class="pixel" > 1 </div><!--
-       --><div class="pixel" > 2 </div><!--
-       --><div class="pixel" > 3 </div><!--
-       --><div class="pixel" > 4 </div><!--
-       --><div class="pixel" > 5 </div>
+        <div class="linha" >
+          <div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div><!--
+       --><div class="pixel" >  </div>
         </div>
       </section>
     </main>
