--- a/index.html
+++ b/index.html
@@ -26,53 +26,14 @@
         <div class="color" ></div>
       </section>
   
-      <input type="number" min="0" id="board-size" oninput="validity.valid || (value='');">
+      <input type="number" min="0" id="board-size" >
+      <!-- oninput="validity.valid || (value='');" -->
 
       <button id="generate-board" >VQV</button>
 
       <button id="clear-board" >Limpar</button>
   
-      <section id="pixel-board" >
-        <div class="linha" >
-          <div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div>
-        </div>
-  
-        <div class="linha" >
-          <div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div>
-        </div>
-  
-        <div class="linha" >
-          <div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div>
-        </div>
-  
-        <div class="linha" >
-          <div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div>
-        </div>
-  
-        <div class="linha" >
-          <div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div><!--
-       --><div class="pixel" >  </div>
-        </div>
-      </section>
+      <section id="pixel-board" ></section>
     </main>
 
     <script src="./script.js" ></script>
