--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="color" ></div>
       </section>
   
-      <input type="number" min="1" id="board-size" oninput="validity.valid||(value='');" >
+      <input type="number" min="0" id="board-size" >
 
       <!-- oninput="validity.valid || (value='');" -->
 
