feat: botao de resetar paleta / style: estiliza projeto

--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixels Art</title>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pixels Art</title>
 
-    <link rel="stylesheet" href="./style.css">
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap"
+    rel="stylesheet">
 
-  <body>
-    <header>
-      <h1 id="title" >Paleta de Cores</h1>
-    </header>
+  <link rel="stylesheet" href="./style.css">
+</head>
 
-    <main>
-      <section id="color-palette" >
-        <div class="color" ></div>
-  
-        <div class="color" ></div>
-  
-        <div class="color" ></div>
-  
-        <div class="color" ></div>
-      </section>
-  
-      <input type="number" min="1" id="board-size" >
+<body>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
 
-      <button id="generate-board" >VQV</button>
+  <main>
+    <section id="color-palette">
+      <div class="color"></div>
 
-      <button id="clear-board" >Limpar</button>
-  
-      <section id="pixel-board" ></section>
-    </main>
+      <div class="color"></div>
 
-    <script src="./script.js" ></script>
-  </body>
+      <div class="color"></div>
+
+      <div class="color"></div>
+    </section>
+
+    <input type="number" min="1" id="board-size" placeholder="Dimensão do quadro">
+
+    <button id="generate-board">Redimensionar</button>
+
+    <div id="buttons">
+      <button id="reset-pallete">Resetar paleta</button>
+      <button id="clear-board">Limpar</button>
+    </div>
+
+    <section id="pixel-board"></section>
+  </main>
+
+  <script src="./script.js"></script>
+</body>
 
 </html>
