refactor: correções lint

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="color"></div>
     </section>
 
-    <input type="number" min="5" max="50" id="board-size" placeholder="Dimensão do quadro">
+    <input type="number" min="5" max="50" id="board-size" placeholder="n x n">
 
     <button id="generate-board">Redimensionar</button>
 
